Optimized showing cell algorithm. Fixed some layout issues.

--- a/src/components/gameBoard/gameBoard.scss
+++ b/src/components/gameBoard/gameBoard.scss
@@ -25,11 +25,12 @@
   }
 
   .gameBoardModalHeader {
-    width: 100%;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     margin-bottom: 10px;
+    margin-right: 60px;
   }
 
   .gameFinishedContainer {
@@ -39,7 +40,7 @@
   }
   .cellRow {
     display: flex;
-    width: 100vw;
+    width: 98vw;
     margin: 1px;
     justify-content: center;
     max-height: 50px;
@@ -51,5 +52,13 @@
     }
     margin: 5px;
     height: 100%;
+  }
+}
+
+.ReactModalPortal {
+  .cell {
+    span {
+      font-size: 100%;
+    }
   }
 }
